--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </section>
   <section id="projects">
   <h2 class="text-2xl font-bold text-center text-[#62d6ad]">Projects I am working on</h2>
-  <div class="flex flex-row w-1100 items-center justify-center space-x-20 py-10 space-y-1.5">
+  <div class="flex flex-col sm:flex-row gap-y-5 w-1100 items-center justify-center space-x-20 py-10 space-y-1.5">
     <img class="dog-image" style="height: 200px;" alt="iamge of a dog" src="https://media.tenor.com/d7_52xh_2dQAAAAM/dog-work.gif">
     <div class="flex flex-col space-y-2">
      <div class="flex flex-row"><p><i class="fa-solid fa-mobile pr-3 fa-xl" style="color: #62d6ad;"></i> Mobile app</p></div>
@@ -39,7 +39,7 @@
 </section>
   <section id="books">
     <h4 class="text-xl font-bold text-center text-[#62d6ad]">Best books I've read this year <span class="text-white font-normal text-sm">(2023)</span></h4>
-  <div class="flex flex-col w-1100 text-center justify-center space-x-6 sm:flex-row sm:space-x-6 space-y-1.5 py-10">
+  <div class="flex flex-col w-1100 text-center space-x-6 space-y-1.5 py-10 sm:flex-row sm:space-x-1.5 justify-center items-center">
     <a class="book-img" target="_blank" href="https://www.goodreads.com/book/show/840.The_Design_of_Everyday_Things"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1442460745i/840.jpg" height="250" width="250"></a>
     <a class="book-img" target="_blank" href="https://www.goodreads.com/book/show/136251.Harry_Potter_and_the_Deathly_Hallows"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1663805647i/136251.jpg" height="250" width="250"></a>
     <a target="_blank" href="https://www.goodreads.com/book/show/55189231-the-art-and-business-of-online-writing"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1598897589i/55189231.jpg" height="250" width="250"></a>
@@ -49,7 +49,7 @@
 <div class="w-1100 flex flex-col text-center content-center py-15 space-y-1.5">
   <h5 class="text-lg font-bold text-[#62d6ad]">Currently vibing to</h5>
   <div class="w-full flex flex-row justify-center">
-  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6gpWjVtsc8imA8DYgvOxlq?utm_source=generator&theme=0" width="30%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6gpWjVtsc8imA8DYgvOxlq?utm_source=generator&theme=0" width="80%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   </div>
 </div>
 </section>
@@ -61,8 +61,10 @@
 <a target="_blank" href="https://www.goodreads.com/user/show/150361888-ivo-aloudek"><i class="fa-brands fa-goodreads fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
 </div>
 </footer>
+<!--
 <div class="fixed bottom-3 right-3 z-50">
 <img class="animate-spin duration-1000" width="150" src="/images/infinitesvg.svg">
 </div>
+-->
 </body>
 </html>
