--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
   </div>
 </section>
   <section id="projects">
-  <h2 class="text-2xl font-bold text-center text-[#62d6ad]">Projects I am working on</h2>
-  <div class="flex flex-col sm:flex-row gap-y-5 w-1100 items-center justify-center space-x-20 py-10 space-y-1.5">
-    <img class="dog-image" style="height: 200px;" alt="iamge of a dog" src="https://media.tenor.com/d7_52xh_2dQAAAAM/dog-work.gif">
-    <div class="flex flex-col space-y-2">
+  <h2 class="text-2xl font-bold text-center text-[#62d6ad]">Working on:</h2>
+  <div class="flex flex-col sm:flex-row gap-y-5 w-1100 items-center justify-center py-10">
+    <div class="flex flex-col gap-2">
      <div class="flex flex-row"><p><i class="fa-solid fa-mobile pr-3 fa-xl" style="color: #62d6ad;"></i> Mobile app</p></div>
      <div class="flex flex-row"><p><i class="fa-solid fa-pencil pr-3 fa-xl" style="color: #62d6ad;"></i> 2 Websites</p></div>
      <div class="flex flex-row"><p><i class="fa-brands fa-google pr-3 fa-xl" style="color: #62d6ad;"></i> Google UX Certificate</p></div>
