--- a/index.html
+++ b/index.html
@@ -47,14 +47,13 @@
 <section id="vibe">
 <div class="w-1100 flex flex-col text-center content-center py-15 space-y-1.5">
   <h5 class="text-lg font-bold text-[#62d6ad]">Currently vibing to</h5>
-  <div class="w-full flex flex-row justify-center">
+  <div class="w-1100 flex flex-row justify-center">
   <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6gpWjVtsc8imA8DYgvOxlq?utm_source=generator&theme=0" width="50%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   </div>
 </div>
 </section>
-<sec id="contact"></sec>
 <footer>
-<div class="flex space-x-5 items-center justify-center w-1100 py-5">
+<div class="flex space-x-5 items-center justify-center w-1100 py-8">
 <a target="_blank" href="https://www.linkedin.com/in/ivo-%C5%BEaloudek-18a394216/"><i class="fa-brands fa-linkedin fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
 <a target="_blank" href="https://github.com/zalivo"><i class="fa-brands fa-github fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
 <a target="_blank" href="https://www.goodreads.com/user/show/150361888-ivo-aloudek"><i class="fa-brands fa-goodreads fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
