--- a/books.html
+++ b/books.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/swup@3"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://kit.fontawesome.com/ad41694d2d.js" crossorigin="anonymous"></script>
     <script defer src="main.js"></script>
-<title>Docume</title>
+<title>Books</title>
 </head>
-<body>
-    
+<body class="bg-[#1e1f21] text-white">
+<nav class="flex flex-row justify-around p-4">
+    <div><a href="/"><h1 class="font-bold text-4xl text-[#62d6ad]">Ivo Žaloudek</h1></a></div>
+    <div><a href="books.html">Books</a></div>
+</nav>
+    <div class="flex h-screen items-center justify-center">
+        <img src="https://static.wikia.nocookie.net/ff68e993-d2fd-469a-bd5d-14ecaf664b59/scale-to-width/755" height="300" width="300">
+    </div>
 </body>
 </html>
