--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     
   </head>
   <body class="bg-[#1e1f21] text-white">
-    <nav class="flex flex-row justify-between p-4">
-      <div><h1 class="font-bold text-4xl text-[#62d6ad]">Ivo Žaloudek</h1></div>
+    <nav class="flex flex-row justify-around p-4">
+      <div><a href="/"><h1 class="font-bold text-4xl text-[#62d6ad]">Ivo Žaloudek</h1></a></div>
+      <div><a href="./books.html">Books</a></div>
   </nav>
   <section id="who-am-i"></section>
   <section id="main-words">
@@ -36,6 +37,7 @@
     </div>
   </div>
 </section>
+
   <section id="books">
     <h4 class="text-xl font-bold text-center text-[#62d6ad]">Best books I've read this year <span class="text-white font-normal text-sm">(2023)</span></h4>
   <div class="flex flex-col w-1100 text-center py-10 sm:flex-row justify-center items-center gap-2">
