uppercase change, need to push so that I can pull 😋

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body class="bg-[#1e1f21] text-white">
     <nav class="flex flex-row justify-around p-4">
       <div><a href="/"><h1 class="font-bold text-4xl text-[#62d6ad]">Ivo Žaloudek</h1></a></div>
-      <div><a href="./books.html">Books</a></div>
+      <div><a class="uppercase" href="./books.html">Books</a></div>
   </nav>
   <section id="who-am-i"></section>
   <section id="main-words">
