ready player one book added 📖

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <a class="book-img" target="_blank" href="https://www.goodreads.com/book/show/840.The_Design_of_Everyday_Things"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1442460745i/840.jpg" alt="image of the book Design of Everyday Things" height="250" width="250"></a>
     <a class="book-img" target="_blank" href="https://www.goodreads.com/book/show/136251.Harry_Potter_and_the_Deathly_Hallows"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1663805647i/136251.jpg" alt="Image of the book Harry_Potter_and_the_Deathly_Hallows" height="250" width="250"></a>
     <a target="_blank" href="https://www.goodreads.com/book/show/55189231-the-art-and-business-of-online-writing"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1598897589i/55189231.jpg" alt="image of the book the-art-and-business-of-online-writing" height="250" width="250"></a>
+    <a target="_blank" href="https://www.goodreads.com/book/show/9969571-ready-player-one"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1500930947i/9969571.jpg" alt="image of the book ready player one" height="250" width="250"></a>
   </div>
 </section>
 <section id="vibe">
