--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <div class="w-1100 flex flex-col text-center content-center py-15 space-y-1.5">
   <h5 class="text-lg font-bold text-[#62d6ad]">Currently vibing to</h5>
   <div class="w-1100 flex flex-row justify-center">
-  <iframe class="sm:w-1/2 md:w-3/4 lg:w-2/6" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6gpWjVtsc8imA8DYgvOxlq?utm_source=generator&theme=0" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+  <iframe class="sm:w-1/2 md:w-3/4 lg:w-2/6" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3cXBYazaDFu80FJWoQd9mq?utm_source=generator" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   </div>
 </div>
 </section>
