--- a/books.html
+++ b/books.html
@@ -12,12 +12,22 @@
 <title>Books</title>
 </head>
 <body class="bg-[#1e1f21] text-white">
-<nav class="flex flex-row justify-around p-4">
+<nav class="flex flex-row justify-around p-4 place-items-center">
     <div><a href="/"><h1 class="font-bold text-4xl text-[#62d6ad]">Ivo Žaloudek</h1></a></div>
-    <div><a href="books.html">Books</a></div>
+    <div><a class="uppercase"  href="books.html">Books</a></div>
 </nav>
-    <div class="flex h-screen items-center justify-center">
-        <img src="https://static.wikia.nocookie.net/ff68e993-d2fd-469a-bd5d-14ecaf664b59/scale-to-width/755" height="300" width="300">
+<section id="books">
+    <div class="px-5 pt-10">
+    <h1 class="text-5xl font-bold text-[#62d6ad] pb-10">Best books I've read in:</h1>
+    <h4 class="text-3xl font-bold text-center text-[#62d6ad]"><i class="fa-regular fa-calendar" style="color: #62d6ad;"></i> 2022</h4>
+    <div class="flex flex-col flex-wrap w-1100 text-center py-10 sm:flex-row justify-center items-center gap-2">
+        <a class="book-img" target="_blank" href="https://www.goodreads.com/book/show/23692271-sapiens?ac=1&from_search=true&qid=jgjXMc3YOy&rank=1"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1595674533i/23692271.jpg" alt="image of the book Sapiens: A Brief History of Humankind" height="250" width="250"></a>
+        <a class="book-img" target="_blank" href="https://www.goodreads.com/book/show/41881472-the-psychology-of-money?ref=nav_sb_ss_1_19"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1581527774i/41881472.jpg" alt="Image of the book The Psychology of money" height="240" width="240"></a>
+        <a target="_blank" href="https://www.goodreads.com/book/show/27220736-shoe-dog?ref=nav_sb_ss_1_8"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1457284880i/27220736.jpg" alt="image of the book Shoe Dog: A Memoir by the Creator of Nike" height="250" width="250"></a>
+        <a target="_blank" href="https://www.goodreads.com/book/show/19661852-fluent-forever?ref=nav_sb_ss_1_14"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1387702551i/19661852.jpg" alt="image of the book Fluent Forever: How to Learn Any Language Fast and Never Forget It" height="250" width="250"></a>
+        <a target="_blank" href="https://www.goodreads.com/book/show/58211955-the-only-study-guide-you-ll-ever-need?ref=nav_sb_ss_1_20"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1622462507i/58211955.jpg" alt="image of the book The Only Study Guide You'll Ever Need: Simple tips, tricks and techniques to help you ace your studies and pass your exams!" height="250" width="250"></a>
     </div>
+    </div>
+</section>
 </body>
 </html>
