why aren't pictures all the same height sad 😥

--- a/books.html
+++ b/books.html
@@ -25,9 +25,9 @@
         <a class="book-img" target="_blank" href="https://www.goodreads.com/book/show/41881472-the-psychology-of-money?ref=nav_sb_ss_1_19"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1581527774i/41881472.jpg" alt="Image of the book The Psychology of money" height="240" width="240"></a>
         <a target="_blank" href="https://www.goodreads.com/book/show/27220736-shoe-dog?ref=nav_sb_ss_1_8"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1457284880i/27220736.jpg" alt="image of the book Shoe Dog: A Memoir by the Creator of Nike" height="250" width="250"></a>
         <a target="_blank" href="https://www.goodreads.com/book/show/19661852-fluent-forever?ref=nav_sb_ss_1_14"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1387702551i/19661852.jpg" alt="image of the book Fluent Forever: How to Learn Any Language Fast and Never Forget It" height="250" width="250"></a>
-        <a target="_blank" href="https://www.goodreads.com/book/show/58211955-the-only-study-guide-you-ll-ever-need?ref=nav_sb_ss_1_20"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1622462507i/58211955.jpg" alt="image of the book The Only Study Guide You'll Ever Need: Simple tips, tricks and techniques to help you ace your studies and pass your exams!" height="250" width="250"></a>
+        <a target="_blank" href="https://www.goodreads.com/book/show/58211955-the-only-study-guide-you-ll-ever-need?ref=nav_sb_ss_1_20"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1622462507i/58211955.jpg" alt="image of the book The Only Study Guide You'll Ever Need: Simple tips, tricks and techniques to help you ace your studies and pass your exams!" height="235" width="235"></a>
     </div>
     </div>
 </section>
-</body>
+</body>pnpm
 </html>
