footer link added and footer added on books.html 😎

--- a/books.html
+++ b/books.html
@@ -27,5 +27,13 @@
         <a target="_blank" href="https://www.goodreads.com/book/show/58211955-the-only-study-guide-you-ll-ever-need?ref=nav_sb_ss_1_20"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1622462507i/58211955.jpg" alt="image of the book The Only Study Guide You'll Ever Need: Simple tips, tricks and techniques to help you ace your studies and pass your exams!" height="235" width="235"></a>
     </div>
 </section>
+<footer>
+    <div class="flex space-x-5 items-center justify-center w-1100 py-8">
+        <a target="_blank" href="https://www.linkedin.com/in/ivo-%C5%BEaloudek-18a394216/"><i class="fa-brands fa-linkedin fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
+        <a target="_blank" href="https://github.com/zalivo"><i class="fa-brands fa-github fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
+        <a target="_blank" href="https://www.goodreads.com/user/show/150361888-ivo-aloudek"><i class="fa-brands fa-goodreads fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
+        <a target="_blank" href="https://medium.com/@izaloudek5"><i class="fa-brands fa-medium fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
+    </div>
+</footer>
 </body>
 </html>
