--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h2 class="text-2xl font-bold text-center text-[#62d6ad]">Interests</h2>
       <div class="flex sm:flex-row flex-col min-h-screen items-center justify-center gap-5 py-10">
         <div class="group h-96 w-80 [perspective:1000px]">
-          <div class="relative h-full w-full rounded-md transition-all duration-500 [transform-style:preserve-3d] sm:group-focus:[transform:rotateY(180deg)] group-hover:[transform:rotateY(180deg)]">
+          <div class="relative h-full w-full rounded-md transition-all duration-500 [transform-style:preserve-3d] sm:group-active:[transform:rotateY(180deg)] group-hover:[transform:rotateY(180deg)]">
             <div class="absolute inset-0">
               <img class="h-full w-full rounded-xl object-cover shadow-xl shadow-black/40" src="https://images.unsplash.com/photo-1506880018603-83d5b814b5a6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1548&q=80" alt="person holding a book"/>
             </div>
@@ -53,7 +53,7 @@
           </div>
         </div>
         <div class="group h-96 w-80 [perspective:1000px]">
-          <div class="relative h-full w-full rounded-md transition-all duration-500 [transform-style:preserve-3d] sm:group-focus:[transform:rotateY(180deg)] group-hover:[transform:rotateY(180deg)]">
+          <div class="relative h-full w-full rounded-md transition-all duration-500 [transform-style:preserve-3d] sm:group-active:[transform:rotateY(180deg)] group-hover:[transform:rotateY(180deg)]">
             <div class="absolute inset-0">
               <img class="h-full w-full rounded-xl object-cover shadow-xl shadow-black/40" src="https://images.unsplash.com/photo-1553165558-424ffa9c4303?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="drone" />
             </div>
@@ -80,7 +80,7 @@
 <div class="w-1100 flex flex-col text-center content-center py-15 space-y-1.5">
   <h5 class="text-lg font-bold text-[#62d6ad]">Currently vibing to</h5>
   <div class="w-1100 flex flex-row justify-center">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/4nvewes8Inc?si=f81wraD5r88YZ-ym&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/4nvewes8Inc?si=f81wraD5r88YZ-ym&amp;controls=0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
 </div>
 </section>
@@ -89,6 +89,7 @@
 <a target="_blank" href="https://www.linkedin.com/in/ivo-%C5%BEaloudek-18a394216/"><i class="fa-brands fa-linkedin fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
 <a target="_blank" href="https://github.com/zalivo"><i class="fa-brands fa-github fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
 <a target="_blank" href="https://www.goodreads.com/user/show/150361888-ivo-aloudek"><i class="fa-brands fa-goodreads fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
+<a target="_blank" href="https://medium.com/@izaloudek5"><i class="fa-brands fa-medium fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
 </div>
 </footer>
 </body>
