--- a/books.html
+++ b/books.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="https://unpkg.com/swup@3"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/ad41694d2d.js" crossorigin="anonymous"></script>
     <script defer src="main.js"></script>
@@ -17,7 +16,7 @@
     <div><a class="uppercase font-medium text-lg"  href="books.html">Books</a></div>
 </nav>
 <section id="books">
-    <h1 class="text-5xl font-bold text-center text-[#62d6ad] py-10">Best books I've read in:</h1>
+    <h1 class="text-5xl font-bold text-center text-[#62d6ad] py-10">Best books I read in:</h1>
     <h4 class="text-3xl font-bold text-center text-[#62d6ad]"><i class="fa-regular fa-calendar" style="color: #62d6ad;"></i> 2022</h4>
     <div class="flex flex-col flex-wrap w-1100 text-center py-10 sm:flex-row justify-center items-center gap-2">
         <a class="book-img" target="_blank" href="https://www.goodreads.com/book/show/23692271-sapiens?ac=1&from_search=true&qid=jgjXMc3YOy&rank=1"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1595674533i/23692271.jpg" alt="Sapiens: A Brief History of Humankind book" height="250" width="250"></a>
