--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
   </head>
   <body class="bg-[#1e1f21] text-white">
     <nav class="flex flex-row justify-around p-4 place-items-center">
-      <div><a href="/"><h1 class="font-bold text-4xl text-[#62d6ad]">Ivo Žaloudek</h1></a></div>
+      <div><a href="/"><h1 class="font-bold text-4xl text-[#62d6ad]">Ivo</h1></a></div>
       <div><a class="uppercase font-medium text-lg" href="./books.html">Books</a></div>
   </nav>
-  <section id="who-am-i"></section>
   <section id="main-words">
   <div class="flex flex-col text-center space-y-1.5 py-10">
   <p class="text-xl">Student at <a target="_blank" class="font-bold text-[#62d6ad] hover:underline" href="https://fis.vse.cz/magisterske-studium/magisterske-programy/ux-vyzkum-a-design-ist/">UX Research and Design</a></p>
@@ -28,11 +27,10 @@
 </section>
   <section id="projects">
   <h2 class="text-2xl font-bold text-center text-[#62d6ad]">Working on:</h2>
-  <div class="flex flex-col sm:flex-row gap-y-5 w-1100 items-center justify-center py-10">
+  <div class="flex flex-col sm:flex-row gap-y-5 items-center justify-center py-10">
     <div class="flex flex-col gap-2">
      <div class="flex flex-row"><p><i class="fa-solid fa-mobile pr-3 fa-xl" style="color: #62d6ad;"></i> Mobile app</p></div>
      <div class="flex flex-row"><p><i class="fa-solid fa-pencil pr-3 fa-xl" style="color: #62d6ad;"></i> 2 Websites</p></div>
-     <div class="flex flex-row"><p><i class="fa-brands fa-google pr-3 fa-xl" style="color: #62d6ad;"></i><a target="_blank" class="font-bold text-[#62d6ad] hover:underline" href="https://coursera.org/share/8b0e5ab4f6c2fe764ddb7a398bf60060">Google UX Certificate</a></p></div>
     </div>
   </div>
 </section>
