--- a/books.html
+++ b/books.html
@@ -12,7 +12,7 @@
 </head>
 <body class="bg-[#1e1f21] text-white">
 <nav class="flex flex-row justify-around p-4 place-items-center">
-    <div><a href="/"><h1 class="font-bold text-4xl text-[#62d6ad]">Ivo Žaloudek</h1></a></div>
+    <div><a href="/"><h1 class="font-bold text-4xl text-[#62d6ad]">Ivo</h1></a></div>
     <div><a class="uppercase font-medium text-lg"  href="books.html">Books</a></div>
 </nav>
 <section id="books">
