--- a/books.html
+++ b/books.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.png" />
     <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/ad41694d2d.js" crossorigin="anonymous"></script>
     <script defer src="main.js"></script>
-<title>Books</title>
+<title>Books | Ivo Žaloudek</title>
 </head>
 <body class="bg-[#1e1f21] text-white">
 <nav class="flex flex-row justify-around p-4 place-items-center">
