nav changes once again...

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
   </head>
   <body class="bg-[#1e1f21] text-white">
-    <nav class="flex flex-row justify-around p-4 place-items-center">
+    <nav class="flex flex-row justify-between sm:justify-around p-4 place-items-center">
       <div><a href="/"><h1 class="font-bold text-4xl text-[#62d6ad]">Ivo</h1></a></div>
       <div><a class="uppercase font-medium text-lg" href="./books.html">Books</a></div>
   </nav>
