--- a/books.html
+++ b/books.html
@@ -17,7 +17,7 @@
     <div><a class="uppercase font-medium text-lg"  href="books.html">Books</a></div>
 </nav>
 <section id="books">
-    <h1 class="text-5xl font-bold text-center text-[#62d6ad] py-10">Best books I read in:</h1>
+    <h1 class="text-5xl font-bold text-center text-[#62d6ad] py-10">Best books I read in</h1>
     <h4 class="text-3xl font-bold text-center text-[#62d6ad]"><i class="fa-regular fa-calendar" style="color: #62d6ad;"></i> 2023</h4>
     <div class="flex flex-col flex-wrap w-1100 text-center py-10 sm:flex-row justify-center items-center gap-2">
         <a class="book-img" target="_blank" href="https://www.goodreads.com/book/show/840.The_Design_of_Everyday_Things"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1442460745i/840.jpg" alt="Design of Everyday Things book" height="250" width="250"></a>
