--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <h2 class="text-2xl font-bold text-center text-[#62d6ad]">Working on:</h2>
   <div class="flex flex-col sm:flex-row gap-y-5 items-center justify-center py-10">
     <div class="flex flex-col gap-2">
-     <div class="flex flex-row"><p><i class="fa-solid fa-mobile pr-3 fa-xl" style="color: #62d6ad;"></i> Mobile app</p></div>
-     <div class="flex flex-row"><p><i class="fa-solid fa-pencil pr-3 fa-xl" style="color: #62d6ad;"></i> 2 Websites</p></div>
+     <div class="flex flex-row"><p><i class="fa-solid fa-mobile pr-3 fa-xl" style="color: #62d6ad;"></i>Mobile app</p></div>
+     <div class="flex flex-row"><p><i class="fa-solid fa-pencil pr-3 fa-xl" style="color: #62d6ad;"></i>Websites</p></div>
     </div>
   </div>
 </section>
@@ -66,7 +66,7 @@
       </div>
     </section>
   <section id="books">
-    <h4 class="text-xl font-bold text-center text-[#62d6ad]">Best books I've read this year <span class="text-white font-normal text-sm">(2023)</span></h4>
+    <h4 class="text-xl font-bold text-center text-[#62d6ad]">Best books I recently read</h4>
   <div class="flex flex-col flex-wrap w-1100 text-center py-10 sm:flex-row justify-center items-center gap-2">
     <a class="book-img" target="_blank" href="https://www.goodreads.com/book/show/840.The_Design_of_Everyday_Things"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1442460745i/840.jpg" alt="image of the book Design of Everyday Things" height="250" width="250"></a>
     <a class="book-img" target="_blank" href="https://www.goodreads.com/book/show/136251.Harry_Potter_and_the_Deathly_Hallows"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1663805647i/136251.jpg" alt="Image of the book Harry_Potter_and_the_Deathly_Hallows" height="250" width="250"></a>
