flip card section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </section>
     <section id="interests">
         <h2 class="text-2xl font-bold text-center text-[#62d6ad]">Interests</h2>
-      <div class="flex sm:flex-row flex-col min-h-screen items-center justify-center gap-5 py-10">
+      <div class="flex sm:flex-row flex-col  items-center justify-center gap-5 py-10">
         <div class="group h-96 w-80 [perspective:1000px]">
           <div class="relative h-full w-full rounded-md transition-all duration-500 [transform-style:preserve-3d] sm:group-active:[transform:rotateY(180deg)] group-hover:[transform:rotateY(180deg)]">
             <div class="absolute inset-0">
